--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇮🇳 印度-1.76MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇬🇧 英国-367.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-386.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-876.5KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇦 加拿大-756.3KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇰🇷 韩国-3.22MB/s(Youtube:不良林), server: 152.70.234.70, port: 26701, type: vmess, uuid: 05f824f3-4724-4344-b26b-9edd602874bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: 1chuan.top, port: 443, type: vmess, uuid: fa8f90e0-2fae-4b05-df7a-ea325bc517d8, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /evo, ws-headers: {Host: 1chuan.top}}
-  - {name: 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林), server: au.project4gyuna.pw, port: 80, type: vmess, uuid: 0613c82b-1f56-432f-b94b-691e294d2314, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /project4gyuna.pw, ws-headers: {Host: au.project4gyuna.pw}}
+  - {name: 🇳🇱 荷兰-229.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-855.8KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: 152.89.210.84, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 波兰-1004.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.14MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.98MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 波兰-1004.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
