--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-1.76MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-229.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-855.8KB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: 152.89.210.84, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
   - {name: 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 波兰-1004.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.14MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-876.5KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇬🇧 英国-367.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林), server: 185.167.116.253, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.253, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.253, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: 185.167.116.253, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.253, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.76MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-229.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-855.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 波兰-1004.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
