--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇸🇬 新加坡-876.5KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇬🇧 英国-367.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林), server: 185.167.116.253, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.253, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.253, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: 185.167.116.253, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.253, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 331tw9.fans8.xyz, port: 443, type: trojan, password: dfa2821d-0418-4427-8f17-cef26d02370f, sni: 331tw9.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.253, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇫🇷 法国-2.54MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 波兰-688.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-688.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 波兰-638.6KB/s(Youtube:不良林), server: 217.30.10.65, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 波兰-670.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 波兰-626.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-876.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-367.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.86MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-781.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.11MB/s(Youtube:不良林)
+      - 波兰-688.0KB/s(Youtube:不良林)
+      - 波兰-688.5KB/s(Youtube:不良林)
+      - 波兰-638.6KB/s(Youtube:不良林)
+      - 波兰-670.9KB/s(Youtube:不良林)
+      - 波兰-626.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
