--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: 152.89.210.84, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-283.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇬🇧 英国-1.65MB/s(Youtube:不良林), server: 152.89.210.84, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林), server: 185.167.116.253, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇺🇸 美国-819.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-965.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-286.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 波兰-283.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-507.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-965.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
